added changes to the media query for image removal / resizing for mobile

--- a/media-queries.html
+++ b/media-queries.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <div class="header-img">
-        <img src="http://lorempixel.com/g/900/400" alt="">
+        <img class="hidden-on-mobile" src="http://lorempixel.com/g/900/400" alt="">
     </div>
     <section id="main" class="main">
         <h2>Main Section</h2>
@@ -33,7 +33,6 @@
     <footer>
         <p>(c) 2017 All rights reserved</p>
         <div id="social-media-links">
-
         </div>
     </footer>
 </body>
