--- a/media-queries.html
+++ b/media-queries.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Media Queries</title>
-    <link rel="stylesheet" type="text/css" href="css/media-queries.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<title>Media Queries</title>
+	<link rel="stylesheet" type="text/css" href="css/media-queries.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="alert-info hidden-on-mobile">
-        <a href="#main">Skip to main content</a>
-    </div>
-    <h1>Company</h1>
-    <nav>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="header-img">
-        <img class="hidden-on-mobile" src="http://lorempixel.com/g/900/400" alt="">
-    </div>
-    <section id="main" class="main">
-        <h2>Main Section</h2>
-        <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
-    </section>
-    <section class="sub-section">
-        <h2>Sub-section</h2>
-        <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-    </section>
-    <footer>
-        <p>(c) 2017 All rights reserved</p>
-        <div id="social-media-links">
-        </div>
-    </footer>
+<div class="main">
+	<a href="#main">Skip to main content</a>
+</div>
+<h1>Company</h1>
+<nav>
+	<div class="nav-links"><a href="#">Home</a></div>
+		<div class="nav-links"><a href="#">About</a></div>
+			<div class="nav-links"><a href="#">Work</a></div>
+				<div class="nav-links"><a href="#">Contact</a></div>
+					</ul>
+	<br><br>
+</nav>
+<div>
+	<img class="smaller-on-mobile" src="http://lorempixel.com/g/900/400" alt="">
+</div i>
+<section id="main" class="main">
+	<h2>Main Section</h2>
+	<p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi
+		consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+</section>
+<section class="sub-section">
+	<h2>Sub-section</h2>
+	<p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum
+		totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+</section>
+<footer>
+	<p>(c) 2017 All rights reserved</p>
+	<div id="social-media-links">
+	</div>
+</footer>
 </body>
 </html>
