--- a/media-queries.html
+++ b/media-queries.html
@@ -24,13 +24,11 @@
 </div i>
 <section id="main" class="main">
 	<h2>Main Section</h2>
-	<p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi
-		consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+	<p>Qui Facet per alium, facet per se</p>
 </section>
 <section class="sub-section">
 	<h2>Sub-section</h2>
-	<p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum
-		totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+	<p>furem fur cognozget et lupum lupus</p>
 </section>
 <footer>
 	<p>(c) 2017 All rights reserved</p>
