added social media links

--- a/media-queries.html
+++ b/media-queries.html
@@ -36,6 +36,18 @@
 	<p>(c) 2017 All rights reserved</p>
 	<div id="social-media-links">
 	</div>
+
+	<div class="footer-social-icons">
+		<h4 class="_14">Follow us on</h4>
+		<ul class="social-icons">
+			<li><a href="https://www.facebook.com" class="social-icon"> FACEBOOK <img src="http://icons.iconarchive.com/icons/paomedia/small-n-flat/256/social-facebook-icon.png"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://www.twitter.com" class="social-icon"> TWITTER <i class="fa fa-twitter"></i></a></li>
+			<li><a href="https://www.youtube.com" class="social-icon"> YOUTUBE<i class="fa fa-youtube"></i></a></li>
+			<li><a href="https://www.linkedin.com" class="social-icon">LINKEDIN<i class="fa fa-linkedin"></i></a></li>
+			<li><a href="https://plus.google.com" class="social-icon"> GOOGLE PLUS<i class="fa fa-google-plus"></i></a></li>
+		</ul>
+	</div>
+
 </footer>
 </body>
 </html>
