--- a/media-queries.html
+++ b/media-queries.html
@@ -13,10 +13,10 @@
 <h1>Company</h1>
 <nav>
 	<div class="nav-links"><a href="#">Home</a></div>
-		<div class="nav-links"><a href="#">About</a></div>
-			<div class="nav-links"><a href="#">Work</a></div>
-				<div class="nav-links"><a href="#">Contact</a></div>
-					</ul>
+	<div class="nav-links"><a href="#">About</a></div>
+	<div class="nav-links"><a href="#">Work</a></div>
+	<div class="nav-links"><a href="#">Contact</a></div>
+	</ul>
 	<br><br>
 </nav>
 <div>
@@ -38,11 +38,12 @@
 	<div class="footer-social-icons">
 		<h4 class="_14">Follow us on</h4>
 		<ul class="social-icons">
-			<li><a href="https://www.facebook.com" class="social-icon"> FACEBOOK <img src="http://icons.iconarchive.com/icons/paomedia/small-n-flat/256/social-facebook-icon.png"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="https://www.twitter.com" class="social-icon"> TWITTER <i class="fa fa-twitter"></i></a></li>
-			<li><a href="https://www.youtube.com" class="social-icon"> YOUTUBE<i class="fa fa-youtube"></i></a></li>
-			<li><a href="https://www.linkedin.com" class="social-icon">LINKEDIN<i class="fa fa-linkedin"></i></a></li>
-			<li><a href="https://plus.google.com" class="social-icon"> GOOGLE PLUS<i class="fa fa-google-plus"></i></a></li>
+			<li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+			<li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+			<li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
+			<li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+			<li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+			<li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
 		</ul>
 	</div>
 
